# textshr

./: .env  .env.example  .gitignore  .gitmodules  Makefile  docker-compose.yaml
backend/ai_service/: .gitignore  pytest.ini  requirements.txt
backend/ai_service/app/: config.py  main.py
backend/ai_service/app/routes/: text.py
backend/ai_service/app/services/: text_service.py
backend/ai_service/tests/: test_text_routes.py
backend/session_service/: .dockerignore  config.py  main.py  pyproject.toml
backend/session_service/client/: __init__.py  redis_client.py  redis_factory.py
backend/session_service/routes/: session.py  test.py
backend/session_service/schemas/: schemas.py  sсhemas.py
backend/session_service/service /: uuid.py
backend/session_service/tests/: conftest.py  test_redis_client.py
backend/summary_service/: main.py  pyproject.toml
backend/text_service/: Dockerfile  config.py  main.py  pyproject.toml  requirements.txt
backend/text_service/clients/: minio_client.py  minio_factory.py  redis_client.py  redis_factory.py
backend/text_service/crud/: text_crud.py
backend/text_service/routes/: endpoints.py  router_create.py
backend/text_service/schemas/: text.py
backend/text_service/services/: __init__.py  minio_service.py  redis_service.py  storage_service.py
backend/text_service/test/: test_minio_client.py  test_redis_client.py
backend/text_service/test/test_services/: conftest.py  test_storage_create.py  test_storage_delete.py  test_storage_get.py  test_storage_password.py  test_storage_update.py
backend/text_service/utils/: utils.py
frontend/: .gitignore  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/[code]/: page.tsx
frontend/components/: code-editor.tsx
nginx/: Dockerfile  nginx.conf
ngnix/: Dockerfile
