[tool.poetry]
name = "summary-service"
version = "0.1.0"
description = ""
authors = ["PARADIGMASPACE <axomjak@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.121.3"
uvicorn = "^0.38.0"
pydantic = "^2.12.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
